--- a/index.html
+++ b/index.html
@@ -34,6 +34,142 @@
                 </div>
             </div>
         </section>
+
+        <section id="about" class="about">
+            <div class="container">
+                <h2>About Me</h2>
+                <div class="about-content">
+                    <div class="about-text">
+                        <p>I'm a passionate Mobile Web Developer with expertise in HTML5, CSS3, JavaScript, and responsive design. Throughout my studies, I've mastered modern web technologies and best practices for creating exceptional user experiences.</p>
+                        <div class="skills">
+                            <h3>Technical Skills</h3>
+                            <div class="skill-grid">
+                                <div class="skill-item">HTML5</div>
+                                <div class="skill-item">CSS3</div>
+                                <div class="skill-item">JavaScript</div>
+                                <div class="skill-item">Responsive Design</div>
+                                <div class="skill-item">Git & GitHub</div>
+                                <div class="skill-item">Mobile-First Design</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="about-image">
+                        <img src="img/natnat.jpg" alt="Nathie Natnat Profile Photo" class="profile-img">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="projects" class="projects">
+            <div class="container">
+                <h2>My Projects</h2>
+                <div class="project-grid">
+                    <div class="project-card">
+                        <div class="project-image">
+                            <img src="images/project1.jpg" alt="Responsive Landing Page Screenshot" class="project-img">
+                        </div>
+                        <div class="project-content">
+                            <h3>Responsive Landing Page</h3>
+                            <p>A fully responsive landing page built with HTML5, CSS3, and JavaScript featuring modern design principles and mobile-first approach.</p>
+                            <div class="project-tech">
+                                <span>HTML5</span>
+                                <span>CSS3</span>
+                                <span>JavaScript</span>
+                            </div>
+                            <div class="project-links">
+                                <a href="#" class="btn-demo">Live Demo</a>
+                                <a href="#" class="btn-code">GitHub</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="project-card">
+                        <div class="project-image">
+                            <img src="images/project2.jpg" alt="Interactive Web App Screenshot" class="project-img">
+                        </div>
+                        <div class="project-content">
+                            <h3>Interactive Web App</h3>
+                            <p>Dynamic web application with form validation, local storage, and interactive UI components demonstrating advanced JavaScript skills.</p>
+                            <div class="project-tech">
+                                <span>JavaScript</span>
+                                <span>CSS Grid</span>
+                                <span>Local Storage</span>
+                            </div>
+                            <div class="project-links">
+                                <a href="#" class="btn-demo">Live Demo</a>
+                                <a href="#" class="btn-code">GitHub</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="project-card">
+                        <div class="project-image">
+                            <img src="images/project3.jpg" alt="Mobile-First Website Screenshot" class="project-img">
+                        </div>
+                        <div class="project-content">
+                            <h3>Mobile-First Website</h3>
+                            <p>Professional business website optimized for mobile devices with responsive navigation and performance optimization.</p>
+                            <div class="project-tech">
+                                <span>Mobile-First</span>
+                                <span>Flexbox</span>
+                                <span>Performance</span>
+                            </div>
+                            <div class="project-links">
+                                <a href="#" class="btn-demo">Live Demo</a>
+                                <a href="#" class="btn-code">GitHub</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="contact" class="contact">
+            <div class="container">
+                <h2>Get In Touch</h2>
+                <div class="contact-content">
+                    <div class="contact-info">
+                        <h3>Let's Connect</h3>
+                        <p>I'm always interested in new opportunities and collaborations. Feel free to reach out!</p>
+                        <div class="contact-details">
+                            <div class="contact-item">
+                                <strong>Email:</strong> alex.developer@email.com
+                            </div>
+                            <div class="contact-item">
+                                <strong>LinkedIn:</strong> linkedin.com/in/alexdeveloper
+                            </div>
+                            <div class="contact-item">
+                                <strong>GitHub:</strong> github.com/alexdeveloper
+                            </div>
+                        </div>
+                    </div>
+                    <div class="contact-form">
+                        <form id="contactForm">
+                            <div class="form-group">
+                                <label for="name">Name *</label>
+                                <input type="text" id="name" name="name" required>
+                                <span class="error-message" id="nameError"></span>
+                            </div>
+                            <div class="form-group">
+                                <label for="email">Email *</label>
+                                <input type="email" id="email" name="email" required>
+                                <span class="error-message" id="emailError"></span>
+                            </div>
+                            <div class="form-group">
+                                <label for="subject">Subject</label>
+                                <input type="text" id="subject" name="subject">
+                            </div>
+                            <div class="form-group">
+                                <label for="message">Message *</label>
+                                <textarea id="message" name="message" rows="5" required></textarea>
+                                <span class="error-message" id="messageError"></span>
+                            </div>
+                            <button type="submit" class="submit-btn">Send Message</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
