added new files

--- a/index.html
+++ b/index.html
@@ -66,18 +66,18 @@
                 <div class="project-grid">
                     <div class="project-card">
                         <div class="project-image">
-                            <img src="images/project1.jpg" alt="Responsive Landing Page Screenshot" class="project-img">
+                            <img src="img/proj1.png" alt="Music Screenshot" class="project-img">
                         </div>
                         <div class="project-content">
-                            <h3>Responsive Landing Page</h3>
-                            <p>A fully responsive landing page built with HTML5, CSS3, and JavaScript featuring modern design principles and mobile-first approach.</p>
+                            <h3>Music</h3>
+                            <p>A fully Music built with HTML5, CSS3, and JavaScript featuring modern design principles and mobile-first approach.</p>
                             <div class="project-tech">
                                 <span>HTML5</span>
                                 <span>CSS3</span>
                                 <span>JavaScript</span>
                             </div>
                             <div class="project-links">
-                                <a href="#" class="btn-demo">Live Demo</a>
+                                <a href="proj1/index.html" class="btn-demo">Live Demo</a>
                                 <a href="#" class="btn-code">GitHub</a>
                             </div>
                         </div>
@@ -85,10 +85,10 @@
 
                     <div class="project-card">
                         <div class="project-image">
-                            <img src="images/project2.jpg" alt="Interactive Web App Screenshot" class="project-img">
+                            <img src="img/proj2.png" alt="Flower Shop Screenshot" class="project-img">
                         </div>
                         <div class="project-content">
-                            <h3>Interactive Web App</h3>
+                            <h3>Flower Shop</h3>
                             <p>Dynamic web application with form validation, local storage, and interactive UI components demonstrating advanced JavaScript skills.</p>
                             <div class="project-tech">
                                 <span>JavaScript</span>
@@ -96,7 +96,7 @@
                                 <span>Local Storage</span>
                             </div>
                             <div class="project-links">
-                                <a href="#" class="btn-demo">Live Demo</a>
+                                <a href="proj2/flower_shop_website/index.html" class="btn-demo">Live Demo</a>
                                 <a href="#" class="btn-code">GitHub</a>
                             </div>
                         </div>
@@ -104,10 +104,10 @@
 
                     <div class="project-card">
                         <div class="project-image">
-                            <img src="images/project3.jpg" alt="Mobile-First Website Screenshot" class="project-img">
+                            <img src="img/proj3.png" alt="WanderLust Screenshot" class="project-img">
                         </div>
                         <div class="project-content">
-                            <h3>Mobile-First Website</h3>
+                            <h3>WanderLust</h3>
                             <p>Professional business website optimized for mobile devices with responsive navigation and performance optimization.</p>
                             <div class="project-tech">
                                 <span>Mobile-First</span>
@@ -115,7 +115,7 @@
                                 <span>Performance</span>
                             </div>
                             <div class="project-links">
-                                <a href="#" class="btn-demo">Live Demo</a>
+                                <a href="proj3/Wonder_lust/index.html" class="btn-demo">Live Demo</a>
                                 <a href="#" class="btn-code">GitHub</a>
                             </div>
                         </div>
